build(all): change jdk from 11 to 1.8